ingress.fanout.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /foo
        backend:
          serviceName: nginx-service
          servicePort: 8000
      - path: /bar
        backend:
          serviceName: nginx-service2
          servicePort: 8001
